force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <description>Represents an incident that happened to the company&#39;s systems at a certain date, and its status. The updates are held in a separate object.</description>
    <label>Incident</label>
    <nameField>
        <displayFormat>Incident #{0000}</displayFormat>
        <label>Incident #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>