force-app/main/default/objects/Incident__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Incident&#39;s initial description.</description>
    <inlineHelpText>Incident&#39;s initial description.</inlineHelpText>
    <label>Description</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>