force-app/main/default/objects/Incident__c/fields/IncidentEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>IncidentEndDateTime__c</fullName>
    <description>When this incident was solved.</description>
    <inlineHelpText>When this incident was solved.</inlineHelpText>
    <label>Resolved at</label>
    <type>DateTime</type>
</CustomField>