force-app/main/default/objects/Incident__c/fields/IncidentNumber__c.field-meta.xml
<CustomField>
    <fullName>IncidentNumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>