force-app/main/default/objects/Incident__c/fields/IncidentStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>IncidentStartDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When this incident happened.</description>
    <inlineHelpText>When this incident happened.</inlineHelpText>
    <label>Date/time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>