force-app/main/default/objects/Incident__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>System which is affected by this issue.</description>
    <inlineHelpText>System which is affected by this issue.</inlineHelpText>
    <label>System</label>
    <referenceTo>System__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>